# SPARK-martin-project

./: .gitignore  .gitmodules  README.md
hydra/: UAV.launch.yaml  uhumans2.yaml
src/spark_softdrone/: CMakeLists.txt  package.xml
src/spark_softdrone/include/spark_softdrone/: frame_transforms.h
src/spark_softdrone/launch/: full_localization_stack.launch.py  mavros_t265_vio.launch.py  mavros_t265_vio_launch.py  pure_t265_localization.launch.py  visualizer_launch.yaml
src/spark_softdrone/launch/nodes/: robot_state_publisher.launch.py
src/spark_softdrone/rviz/: localization.rviz  softdrone.rviz
src/spark_softdrone/scripts/: pose_serial_receiver.py  pose_serial_sender.py  servo_pivot_joint_state_publisher.py
src/spark_softdrone/src/: offboard_control_srv.cpp  px4_local_position_tf_broadcaster.cpp  px4_to_tf.cpp  setpoint_gui.py  t265_node.cpp  t265_odom_to_mavros_bridge.cpp  t265_pose_tf_broadcaster.cpp  t265_to_map_static_transform_publisher.cpp  t265_to_map_tf_publisher.cpp  t265_to_mavros.cpp  t265_to_px4.cpp  visualizer.cpp
src/spark_softdrone/src/lib/: frame_transforms.cpp
src/spark_softdrone/urdf/: drone.urdf.xacro
